<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">机车厂设备维护检修质量监控网络化管理系统</string>
    <string name="action_settings">Settings</string>   
	<string name="testSQL">测试SQL</string>
	<string name="clean">清除数据</string>	
	<string name="login_label_modifyype">回修类型</string>
	<string name="login_label_traintype">车型</string>
	<string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">增加故障</string>
     <string name="login_label_signin1">查看纪录</string>
    <string name="login_label_sigreg">注册</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">输入用户姓名</string> 
     <string name="login_pwd_hint">输入密码</string> 
    <string name="login_register_link">欢迎进入本系统,请选择用户，输入密码进行登录</string> 
    <string name="login_register_user">输入用户名、密码注册一个新账号</string>
    <string name="login_register_unit">所属部门</string>
     <string name="login_register_autho">所属权限</string>
    <string name="table_train_num">车号</string>
    <string name="table_receive_group">接收班组</string>
    <string name="table_problem">故障内容</string>
    <string name="table_commit">提交</string>
    <string name="table_add_new">查询</string>
     <string name="table_add_photo">拍照</string>
    <string name="table_committer">提交人</string>
    <string name="table_commit_time">提交时间</string>
    <string name="table_labier">责任人</string>
    <string name="table_rowid">序号</string>
    <string name="table_train_num_hint">车号</string>
    <string name="table_train_attach_hint">配属</string>
    <string name="table_recv_group_hint">输入接收单位</string>
    <string name="table_content_hint">输入故障内容</string>
    <string name="register_department_hint">选择所属部门</string>
    <string name="register_user_autho">选择所属权限</string>
    <string name="login_selectuser_hint">选择用户</string>
    <string name="login_selecttrain_hint">选择车型</string>
    <string name="login_selectmodifytrain_hint">选择回修票型</string>
    <string name="sys_exit">选择用户</string>
    <string name="modify_pwd_text">新密码</string> 
    <string name="modify_pwd_text1">确认密码</string> 
    <string name="modify_pwd_hint1">输入新密码</string> 
    <string name="modify_pwd_hint">输入确认密码</string> 
    <string name="modify_btn_name">修改</string> 
    <string name="table_train_attach">配属</string> 
    <string name="add_db_traintype">所属车型</string> 
    <string name="add_db_part">所属部件</string> 
    <string name="add_db_locatioon">所属位置</string> 
    <string name="add_db_recvunit">接收单位</string> 
    <string name="add_db_content">故障内容</string> 
    <string name="add_db_add">增加</string> 
    <string name="db_traintype_hint">输入车型</string> 
    <string name="db_trainpart_hint">输入部件</string>
    <string name="db_trainloc_hint">输入位置</string> 
    <string name="db_content_hint">输入故障内容</string> 
</resources>